--- a/exam/main/templates/main/index.html
+++ b/exam/main/templates/main/index.html
@@ -14,12 +14,23 @@
         <li class="nav-item"><a class="nav-link" href="{% url 'services' %}">Услуги</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">О нас</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'contacts' %}">Контакты</a></li>
+        {% if user.is_authenticated %}
         <li class="nav-item"><a class="nav-link" href="{% url 'service_add' %}">Создать услугу</a></li>
+        {% else %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Авторизоваться</a></li>
+        {% endif %}
     </ul>
 </nav>
 <main role="main" class="container mt-lg-5">
     <div class="starter-template">
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% for elem in lastfive %}
+        <div class="row p-3 text-dark bg-light border-bottom border-top">
+            <img class="col-4" src="{{ elem.image.url }}" alt="Фото услуги">
+            <p class="p-3 mb-2"><b>Наименование:</b> {{ elem.name }} <br> <b>Описание:</b> {{ elem.description }}</p>
+        </div>
+        {% endfor %}
+        {% endblock %}
     </div>
 </main>
 </body>
